update camembert notebook

--- a/HandsOn_camemBERT_ok.ipynb
+++ b/HandsOn_camemBERT_ok.ipynb
@@ -397,6 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# torch.no_grad(): disable gradient calculation, useful for inference\n",
     "with torch.no_grad():\n",
     "    model_output = camembert(**tokenizer_output, output_hidden_states=True)\n",
     "    model_output"
